<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.menuka.loginandregistration.AddSemesterActivity">

    <TextView
        android:id="@+id/txtLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Semester"
        android:textColor="@color/black"
        tools:layout_editor_absoluteX="136dp"
        tools:layout_editor_absoluteY="33dp"
        android:textSize="30sp"
        android:layout_marginTop="34dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/txtViewNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txtLabel"
        android:layout_marginLeft="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="72dp"
        android:text="Number"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/txtViewYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtViewNumber"
        android:layout_alignStart="@+id/txtViewNumber"
        android:layout_below="@+id/txtViewNumber"
        android:layout_marginTop="74dp"
        android:text="Year"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/numberEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txtViewNumber"
        android:layout_alignBottom="@+id/txtViewNumber"
        android:textColor="@color/black"
        android:layout_marginLeft="21dp"
        android:layout_marginStart="21dp"
        android:layout_toEndOf="@+id/txtViewNumber"
        android:layout_toRightOf="@+id/txtViewNumber"
        android:ems="10"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/yearEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/numberEditText"
        android:textColor="@color/black"
        android:layout_alignRight="@+id/numberEditText"
        android:layout_centerVertical="true"
        android:ems="10"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/txtLabel"
        android:layout_alignRight="@+id/txtLabel"
        android:layout_below="@+id/yearEditText"
        android:layout_marginTop="62dp"
        android:text="Add"
        android:textColor="@color/black"
        android:textSize="24sp" />
</RelativeLayout>
