...
        android:layout_centerHorizontal="true"
        android:text="Academic Records"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <Button
        android:id="@+id/btnAddSemester"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView9"
        android:layout_marginEnd="23dp"
...
