<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_student_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.menuka.loginandregistration.StudentProfileActivity">

    <Button
        android:id="@+id/btnGradesManagement"
        android:text="Grades Management"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnAccountSettings"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp" />

    <Button
        android:id="@+id/btnAccountSettings"
        android:text="Account Settings"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnReceivedFeedback"
        android:layout_alignRight="@+id/btnReceivedFeedback"
        android:layout_alignEnd="@+id/btnReceivedFeedback"
        android:layout_marginBottom="10dp" />

    <Button
        android:id="@+id/btnReceivedFeedback"
        android:text="Received Feedback"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/btnGradesManagement"
        android:layout_alignStart="@+id/btnGradesManagement" />

    <Button
        android:id="@+id/btnSignOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sign Out"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:layout_below="@+id/btnReceivedFeedback"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64dp" />

    <TextView
        android:id="@+id/emailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textColor="@color/black"
        android:textSize="24sp"
        tools:text="Logged In as" />


</RelativeLayout>
