<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.menuka.loginandregistration.StudentDetailsForm">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="My Details"
        android:textColor="@color/black"
        android:textSize="24sp"
        />


    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="21dp"
        android:layout_marginStart="21dp"
        android:layout_x="228dp"
        android:layout_y="392dp"
        android:text="Save"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/textViewFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="60dp"
        android:layout_x="35dp"
        android:layout_y="54dp"
        android:text="First Name"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/firstNameEditText"
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        android:layout_x="133dp"
        android:layout_y="38dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        tools:layout_editor_absoluteY="118dp" />

    <EditText
        android:id="@+id/lastNameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="87dp"
        android:layout_x="133dp"
        android:layout_y="101dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/textViewLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:layout_x="40dp"
        android:layout_y="117dp"
        android:text="Last Name"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/textViewBirthday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="64dp"
        android:layout_y="223dp"
        android:text="Birthday"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/textViewDepartment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="42dp"
        android:layout_y="358dp"
        android:text="Department"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/textViewIndexNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/indexNoEditText"
        android:layout_alignBottom="@+id/indexNoEditText"
        android:layout_alignEnd="@+id/textViewFirstName"
        android:layout_alignRight="@+id/textViewFirstName"
        android:layout_x="53dp"
        android:layout_y="292dp"
        android:text="Index No."
        android:textColor="@color/black" />

    <Spinner
        android:id="@+id/genderSpinner"
        android:layout_width="207dp"
        android:layout_height="wrap_content"
        android:layout_x="139dp"
        android:layout_y="160dp"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/textViewGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/birthdayEditText"
        android:layout_alignEnd="@+id/textViewBirthday"
        android:layout_alignRight="@+id/textViewBirthday"
        android:layout_x="56dp"
        android:layout_y="171dp"
        android:text="Gender"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/birthdayEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/indexNoEditText"
        android:layout_alignLeft="@+id/indexNoEditText"
        android:layout_alignStart="@+id/indexNoEditText"
        android:layout_marginBottom="19dp"
        android:layout_x="136dp"
        android:layout_y="201dp"
        android:ems="10"
        android:inputType="date" />

    <EditText
        android:id="@+id/indexNoEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/lastNameEditText"
        android:layout_marginEnd="17dp"
        android:layout_marginRight="17dp"
        android:layout_marginTop="115dp"
        android:layout_x="136dp"
        android:layout_y="275dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@color/black" />

    <Spinner
        android:id="@+id/departmentsSpinner"
        android:layout_width="213dp"
        android:layout_height="wrap_content"
        android:layout_x="136dp"
        android:layout_y="346dp" />

</AbsoluteLayout>
